--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=Updater
 version=1.0.0
-author=Bitworx <kvetko@bitworx.cz>
-maintainer=Bitworx <kvetko@bitworx.cz>
+author=Bitworx
+maintainer=Bitworx
 sentence=Automatic updater for ESP32.
 paragraph=Automatic updater for ESP32. 
 category=Communication
